--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/site.css">
 </head>
 
@@ -46,9 +47,19 @@
     </nav>
 
     <section id="home">
-    <h1 class="text-center display-1">Marcin Owczarz</h1>
+    <h1 class="text-center display-3">Marcin Owczarz</h1>
+
+    <div class="mx-auto">
+        <ul class="social">
+            <li><a href="https://github.com/owik100" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li><a a href="mailto:marcin.owczarz95@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="https://owik.itch.io/" target="_blank"><i class="fab fa-itch-io"></i></a></li>
+        </ul>
+        </div>
+
 
     </section>
+    
 
 
     <section id="umiejetnosci">
