Smaller navbar for mobile

--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
 
 
 
-    <nav id="mainNav" class="navbar fixed-top  navbar-dark navbar-expand-md">
+    <nav id="mainNav" class="navbar fixed-top  navbar-dark navbar-expand-md py-md-2 py-sm-1">
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#mainmenu">
             Menu
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mainmenu">
             <ul class="navbar-nav ml-auto mx-auto ">
-                <li class="nav-item">
-                    <a class="nav-link" href="#home">O mnie</a>
+                <li class="nav-item ">
+                    <a class="nav-link py-md-2 py-sm-1" href="#home">O mnie</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link  ml-md-4" href="#umiejetnosci">Umiejętności</a>
-                </li>
-                <li class="nav-item  ml-md-4">
-                    <a class="nav-link" href="#projekty">Projekty</a>
+                <li class="nav-item ml-md-4">
+                    <a class="nav-link py-md-2 py-sm-1" href="#umiejetnosci">Umiejętności</a>
                 </li>
                 <li class="nav-item  ml-md-4">
-                    <a class="nav-link" href="#kontakt">Kontakt</a>
+                    <a class="nav-link py-md-2 py-sm-1" href="#projekty">Projekty</a>
+                </li>
+                <li class="nav-item  ml-md-4">
+                    <a class="nav-link py-md-2 py-sm-1" href="#kontakt">Kontakt</a>
                 </li>
             </ul>
         </div>
