--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-    <nav id="mainNav" class="navbar fixed-top  navbar-dark navbar-expand-md py-md-2 py-sm-1">
+    <nav id="mainNav" class="navbar fixed-top  navbar-dark navbar-expand-md py-md-2 py-1">
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#mainmenu">
             Menu
             <span class="navbar-toggler-icon"></span>
@@ -32,16 +32,16 @@
         <div class="collapse navbar-collapse" id="mainmenu">
             <ul class="navbar-nav ml-auto mx-auto ">
                 <li class="nav-item ">
-                    <a class="nav-link py-md-2 py-sm-1" href="#home">O mnie</a>
+                    <a class="nav-link py-md-2 py-1" href="#home">O mnie</a>
                 </li>
                 <li class="nav-item ml-md-4">
-                    <a class="nav-link py-md-2 py-sm-1" href="#umiejetnosci">Umiejętności</a>
+                    <a class="nav-link py-md-2 py-1" href="#umiejetnosci">Umiejętności</a>
                 </li>
                 <li class="nav-item  ml-md-4">
-                    <a class="nav-link py-md-2 py-sm-1" href="#projekty">Projekty</a>
+                    <a class="nav-link py-md-2 py-1" href="#projekty">Projekty</a>
                 </li>
                 <li class="nav-item  ml-md-4">
-                    <a class="nav-link py-md-2 py-sm-1" href="#kontakt">Kontakt</a>
+                    <a class="nav-link py-md-2 py-1" href="#kontakt">Kontakt</a>
                 </li>
             </ul>
         </div>
