--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         <div class="collapse navbar-collapse" id="mainmenu">
             <ul class="navbar-nav ml-auto mx-auto ">
                 <li class="nav-item ">
-                    <a class="nav-link py-md-2 py-1" href="#home">O mnie</a>
+                    <a class="nav-link py-md-2 py-1" href="#home">Start</a>
+                </li>
+                <li class="nav-item ml-md-4">
+                    <a class="nav-link py-md-2 py-1" href="#about">O mnie</a>
                 </li>
                 <li class="nav-item ml-md-4">
                     <a class="nav-link py-md-2 py-1" href="#umiejetnosci">Umiejętności</a>
@@ -51,23 +54,43 @@
         <h1 class="text-center display-3">Marcin Owczarz</h1>
 
         <div class="opis">
-            
+
 
         </div>
 
 
         <div class="d-flex justify-content-center">
-            <ul class="social">
+            <ul class="social socialColor">
                 <li><a href="https://github.com/owik100" target="_blank"><i class="fab fa-github icon"></i></a></li>
-                <li><a a href="mailto:marcin.owczarz95@gmail.com" target="_blank"><i class="fas fa-envelope icon"></i></a></li>
+                <li><a href="mailto:marcin.owczarz95@gmail.com" target="_blank"><i class="fas fa-envelope icon"></i></a>
+                </li>
                 <li><a href="https://owik.itch.io/" target="_blank"><i class="fab fa-itch-io icon "></i></a></li>
             </ul>
-            <div id="socialArrow">
-                <li><a href="#umiejetnosci" ><i class="fas fa-chevron-circle-down"></i></a></li>
+            <div id="socialArrow" class="socialColor">
+                <li><a href="#about"><i class="fas fa-chevron-circle-down"></i></a></li>
             </div>
 
         </div>
 
+    </section>
+
+
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
+                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
+                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
+
+                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
+                    <p>onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit. Se</p>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/86/8666580b4e960d717d83398c7efe975911611bd3_full.jpg" >
+                </div>
+            </div>
+        </div>
     </section>
 
 
