Update project section

--- a/index.html
+++ b/index.html
@@ -186,36 +186,53 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="jumbotron" data-toggle="modal" data-target="#exampleModalCenter">
-                        1
+                <div class="col-md-6">
+                    <div class="jumbotron interactive" data-toggle="modal" data-target="#exampleModalCenter">
+                            <h1 class="display-5 text-center">Frogger</h1>
+                            <div class="d-flex justify-content-center">
+                                    <img class="img-fluid " src="images/Projects/Frogger/frogger.gif">
+                            </div>                  
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="jumbotron">
-                        2
-                    </div>
+                <div class="col-md-6">
+                        <div class="jumbotron interactive" data-toggle="modal" data-target="#exampleModalCenter">
+                                <h1 class="display-5 text-center">Pasjans golf</h1>
+                                <div class="d-flex justify-content-center">
+                                        <img class="img-fluid " src="images/Projects/Golf/golf.gif">
+                                </div>                  
+                        </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="jumbotron">
-                        3
-                    </div>
+                <div class="col-md-6">
+                        <div class="jumbotron interactive" data-toggle="modal" data-target="#exampleModalCenter">
+                                <h1 class="display-5 text-center">Notatnik</h1>
+                                <div class="d-flex justify-content-center">
+                                        <img class="img-fluid " src="images/Projects/Notepad/notepad.gif">
+                                </div>                  
+                        </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="jumbotron">
-                        4
-                    </div>
+                <div class="col-md-6">
+                        <div class="jumbotron interactive" data-toggle="modal" data-target="#exampleModalCenter">
+                                <h1 class="display-5 text-center">Dhos Adventures</h1>
+                                <div class="d-flex justify-content-center">
+                                        <img class="img-fluid " src="images/Projects/Dhos/dhos2.gif">
+                                </div>                  
+                        </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="jumbotron">
-                        5
-                    </div>
+                <div class="col-md-6">
+                        <div class="jumbotron interactive" data-toggle="modal" data-target="#exampleModalCenter">
+                                <h1 class="display-5 text-center">Mood Food</h1>
+                                <div class="d-flex justify-content-center">
+                                        <img class="img-fluid " src="images/Projects/Mood food/mood food.gif">
+                                </div>                  
+                        </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="jumbotron">
-                        6
-                    </div>
-                </div>
+                <div class="col-md-6">
+                        <div class="jumbotron interactive" data-toggle="modal" data-target="#exampleModalCenter">
+                                <h1 class="display-5 text-center">Minesweeper</h1>
+                                <div class="d-flex justify-content-center">
+                                        <img class="img-fluid " src="images/Projects/Minesweeper/minesweeper.gif">
+                                </div>                  
+                        </div>
             </div>
         </div>
 
@@ -232,7 +249,12 @@
               </button>
             </div>
             <div class="modal-body">
-              ...
+                <img class="img-fluid"
+                src="images/Projects/Golf/new game.PNG">
+                <img class="img-fluid"
+                src="images/Projects/Golf/in game.PNG">
+                <img class="img-fluid"
+                src="images/Projects/Golf/game over.PNG">
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
