Added new gifs - same size for all (Frogger same scale)

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                             <div class="projectContainer" data-toggle="modal" data-target="#exampleModalCenter">
                                 <div class="projectGifAndMagnifer">
                                     <div class="d-flex justify-content-center projectGif">
-                                        <img class="img-fluid " src="images/Projects/Notepad/notepad.gif">
+                                        <img class="img-fluid " src="images/Projects/Notepad/chat.gif">
                                     </div>
                                     <div class="magnifier">
                                         <i class="fas fa-search-plus fa-3x"></i>
@@ -301,7 +301,7 @@
                             <div class="projectContainer" data-toggle="modal" data-target="#exampleModalCenter">
                                 <div class="projectGifAndMagnifer">
                                     <div class="d-flex justify-content-center projectGif">
-                                        <img class="img-fluid " src="images/Projects/Dhos/dhos2.gif">
+                                        <img class="img-fluid " src="images/Projects/Dhos/dhos.gif">
                                     </div>
                                     <div class="magnifier">
                                         <i class="fas fa-search-plus fa-3x"></i>
@@ -331,7 +331,7 @@
                       </div>
                      
                     </div>
-                    <div class="card mx-auto">
+                    <div class="card ">
                       <img class="card-img-top"src="images/Projects/Minesweeper/minesweeper.gif" alt="Card image cap">
                       <div class="card-body text-center">
                         <h5 class="card-title">Minesweeper</h5>
