Added magnifer to all projects. Added modal too.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
             <div class="card-deck">
 
 
-                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project1" data-target="#Project1Modal">
+                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project1"
+                    data-target="#Project1Modal">
                     <div class="projectGif">
                         <img class="card-img-top" src="images/Projects/Mood food/mood food.gif" alt="Card image cap">
                         <div class="magnifier">
@@ -196,63 +197,91 @@
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title">Mood food</h5>
-                        <p class="card-text">2018 <a href="https://github.com/owik100/Mood-Food" target="blank">Github <i class="fab fa-github"></i>
-                        </a></p>        
+                        <p class="card-text">2018 <a href="https://github.com/owik100/Mood-Food" target="blank">Github
+                                <i class="fab fa-github"></i>
+                            </a></p>
                     </div>
                 </div>
 
                 <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project2"
                     data-target="#Project2Modal">
                     <div class="projectGif">
-                            <img class="card-img-top" src="images/Projects/Minesweeper/minesweeper.gif" alt="Card image cap">
+                        <img class="card-img-top" src="images/Projects/Minesweeper/minesweeper.gif"
+                            alt="Card image cap">
                         <div class="magnifier">
                             <i class="fas fa-search-plus fa-3x"></i>
                         </div>
                     </div>
                     <div class="card-body text-center">
                         <h5 class="card-title">Minesweeper</h5>
-                        <p class="card-text">2018 <a href="https://github.com/owik100/Minesweeper-Food" target="blank">Github <i class="fab fa-github"></i>
-                        </a></p>        
+                        <p class="card-text">2018 <a href="https://github.com/owik100/Minesweeper"
+                                target="blank">Github <i class="fab fa-github"></i>
+                            </a></p>
                     </div>
                 </div>
 
-
-       
-                <div class="card" id="Project3">
-                    <img class="card-img-top" src="images/Projects/Notepad/chat.gif" alt="Card image cap">
+                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project3"
+                    data-target="#Project3Modal">
+                    <div class="projectGif">
+                        <img class="card-img-top" src="images/Projects/Chat/chat.gif" alt="Card image cap">
+                        <div class="magnifier">
+                            <i class="fas fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
                     <div class="card-body text-center">
                         <h5 class="card-title">Chat</h5>
                         <p class="card-text">2018 <a href="https://github.com/owik100/Chat" target="blank">Github <i
-                                    class="fab fa-github"></i></a></p>
+                                    class="fab fa-github"></i>
+                            </a></p>
                     </div>
-
                 </div>
-                <div class="card" id="Project4">
-                    <img class="card-img-top" src="images/Projects/Golf/golf.gif" alt="Card image cap">
+
+                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project4"
+                    data-target="#Project4Modal">
+                    <div class="projectGif">
+                        <img class="card-img-top" src="images/Projects/Golf/golf.gif" alt="Card image cap">
+                        <div class="magnifier">
+                            <i class="fas fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
                     <div class="card-body text-center">
                         <h5 class="card-title">Pasjans golf</h5>
-                        <p class="card-text">2017 <a href="https://github.com/owik100/Golf" target="blank">Github <i
-                                    class="fab fa-github"></i></a></p>
+                        <p class="card-text">2017 <a href="https://github.com/owik100/Golf-Solitaire" target="blank">Github <i
+                                    class="fab fa-github"></i>
+                            </a></p>
                     </div>
-
                 </div>
-                <div class="card" id="Project5">
-                    <img class="card-img-top" src="images/Projects/frogger/frogger.gif" alt="Card image cap">
+
+                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project5"
+                    data-target="#Project5Modal">
+                    <div class="projectGif">
+                        <img class="card-img-top" src="images/Projects/Frogger/frogger.gif" alt="Card image cap">
+                        <div class="magnifier">
+                            <i class="fas fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
                     <div class="card-body text-center">
                         <h5 class="card-title">Frogger</h5>
                         <p class="card-text">2017 <a href="https://github.com/owik100/Frogger" target="blank">Github <i
-                                    class="fab fa-github"></i></a></p>
+                                    class="fab fa-github"></i>
+                            </a></p>
                     </div>
-
                 </div>
-                <div class="card" id="Project6">
+
+                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project6"
+                data-target="#Project6Modal">
+                <div class="projectGif">
                     <img class="card-img-top" src="images/Projects/Dhos/dhos.gif" alt="Card image cap">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Dhos Adventures</h5>
-                        <p class="card-text">2016 - ? </p>
+                    <div class="magnifier">
+                        <i class="fas fa-search-plus fa-3x"></i>
                     </div>
-
                 </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Dhos Adventures</h5>
+                    <p class="card-text">2016 - ? </p>
+                </div>
+            </div>
+
             </div>
 
             <!-- Modal -->
@@ -261,7 +290,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -272,8 +301,130 @@
                             <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
+                                    <i class="fab fa-github"></i>
+                                </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="modal fade" id="Project2Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <img class="img-fluid" src="images/Projects/Golf/new game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/in game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
+                        </div>
+                        <div class="modal-footer">
+                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
+                                    <i class="fab fa-github"></i>
+                                </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="Project3Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <img class="img-fluid" src="images/Projects/Golf/new game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/in game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
+                        </div>
+                        <div class="modal-footer">
+                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
+                                    <i class="fab fa-github"></i>
+                                </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="Project4Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <img class="img-fluid" src="images/Projects/Golf/new game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/in game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
+                        </div>
+                        <div class="modal-footer">
+                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
+                                    <i class="fab fa-github"></i>
+                                </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="Project5Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <img class="img-fluid" src="images/Projects/Golf/new game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/in game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
+                        </div>
+                        <div class="modal-footer">
+                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
+                                    <i class="fab fa-github"></i>
+                                </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="Project6Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <img class="img-fluid" src="images/Projects/Golf/new game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/in game.PNG">
+                            <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
+                        </div>
+                        <div class="modal-footer">
+                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
+                                    <i class="fab fa-github"></i>
+                                </a>
                         </div>
                     </div>
                 </div>
