Working on project 3

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             </div>
 
             <!-- Modal -->
-            <div class="modal fade bd-example-modal-lg" id="Project1Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+            <div class="modal fade" id="Project1Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
                 aria-hidden="true">
                 <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
@@ -297,7 +297,7 @@
                         </div>
                         <div class="modal-body">
                             <p class="text-center">Aplikacja służąca do obsługi restauracji. Pozwala użytkownikom na dodawanie produktów do koszyka i składanie zamówień. Administrator ma możliwość zarządzania produktami. </p>
-                            <p class="text-center">Użyte technologie: ASP.NET MVC, Entity Framework </p>
+                            <p class="text-center">Użyte języki i technologie: C#, ASP.NET MVC, Entity Framework </p>
                             <p class="text-center"><a  href="https://github.com/owik100/Mood-Food" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
                                 <img  class="bImg mx-auto d-block" id="main1" src="images/Projects/Mood food/Menu.PNG"  >
                         </div>
@@ -313,7 +313,7 @@
             </div>
 
 
-            <div class="modal fade bd-example-modal-lg" id="Project2Modal" tabindex="-1" role="dialog" aria-labelledby="Project2ModalTitle"
+            <div class="modal fade" id="Project2Modal" tabindex="-1" role="dialog" aria-labelledby="Project2ModalTitle"
                 aria-hidden="true">
                 <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
@@ -325,7 +325,7 @@
                         </div>
                         <div class="modal-body">
                             <p class="text-center">Gra saper, pozwalająca ustawić ilość min oraz zapisująca wyniki graczy.</p>
-                            <p class="text-center">Użyte technologie:WPF, Dapper </p>
+                            <p class="text-center">Użyte języki i technologie: C#, WPF, Dapper </p>
                             <p class="text-center"><a  href="https://github.com/owik100/Minesweeper" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
                                 <img  class="bImg mx-auto d-block" id="main2" src="images/Projects/Minesweeper/Game.PNG">
                         </div>
@@ -338,25 +338,25 @@
                 </div>
             </div>
 
-            <div class="modal fade" id="Project3Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+            <div class="modal fade" id="Project3Modal" tabindex="-1" role="dialog" aria-labelledby="Project3ModalTitle"
                 aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
+                            <h5 class="modal-title w-100 text-center">Chat</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <img class="img-fluid" src="images/Projects/Golf/new game.PNG">
-                            <img class="img-fluid" src="images/Projects/Golf/in game.PNG">
-                            <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
+                            <p class="text-center">Aplikacja chatu, pozwalająca na wysyłanie wiadomości. Podstawowa konfiguracja odbywa się za pomocą pliku konfiguracyjnego w formacie JSON.</p>
+                            <p class="text-center">Użyte języki i technologie: C#, Win forms</p>
+                            <p class="text-center"><a  href="https://github.com/owik100/Chat" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
+                                <img  class="bImg mx-auto d-block" id="main3" src="images/Projects/Chat/Rozmowa.PNG">
                         </div>
                         <div class="modal-footer">
-                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
-                                    <i class="fab fa-github"></i>
-                                </a>
+                                <img class="d-block w-100 sImg" smallID=small3 src="images/Projects/Chat/Rozmowa.PNG">
+                                <img class="d-block w-100 sImg" smallID=small3 src="images/Projects/Chat/Serwer.PNG">                      
                         </div>
                     </div>
                 </div>
