--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <!--Projects section-->
     <section id="projects">
-        <p class="text-center">onsectetur adipiscing elit. Seonsectetur adipiscing elit. Seonsectetur adipiscing elit.
+        <p class="text-center">Kilka zrealizowanych przeze mnie projektów
         </p>
         <div class="container">
             <div class="card-deck">
@@ -278,7 +278,9 @@
                 </div>
                 <div class="card-body text-center">
                     <h5 class="card-title">Dhos Adventures</h5>
-                    <p class="card-text">2016 - ? </p>
+                    <p class="card-text">2016 - ? <a href="https://owik.itch.io/Dhos-Adeventures" target="blank">Itch.io <i
+                        class="fab fa-itch-io"></i>
+                </a> </p>
                 </div>
             </div>
 
@@ -362,73 +364,77 @@
                 </div>
             </div>
 
-            <div class="modal fade" id="Project4Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+            <div class="modal fade" id="Project4Modal" tabindex="-1" role="dialog" aria-labelledby="Project4ModalTitle"
                 aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
+                            <h5 class="modal-title w-100 text-center">Pasjans golf</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <img class="img-fluid" src="images/Projects/Golf/new game.PNG">
-                            <img class="img-fluid" src="images/Projects/Golf/in game.PNG">
-                            <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
+                            <p class="text-center">Prosta gra w pasjans.</p>
+                            <p class="text-center">Użyte języki i technologie: C#, Win forms</p>
+                            <p class="text-center"><a  href="https://github.com/owik100/Golf-Solitaire" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
+                                <img  class="bImg mx-auto d-block" id="main4" src="images/Projects/Golf/Game.png">
                         </div>
                         <div class="modal-footer">
-                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
-                                    <i class="fab fa-github"></i>
-                                </a>
+                                <img class="d-block w-100 sImg" smallID=small4 src="images/Projects/Golf/Game.png">
+                                <img class="d-block w-100 sImg" smallID=small4 src="images/Projects/Golf/Help.png">                      
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="modal fade" id="Project5Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+            <div class="modal fade" id="Project5Modal" tabindex="-1" role="dialog" aria-labelledby="Project5ModalTitle"
                 aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
+                            <h5 class="modal-title w-100 text-center">Frogger</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <img class="img-fluid" src="images/Projects/Golf/new game.PNG">
-                            <img class="img-fluid" src="images/Projects/Golf/in game.PNG">
-                            <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
+                            <p class="text-center">Gra frogger z trzema poziomami.</p>
+                            <p class="text-center">Użyte języki i technologie: C++</p>
+                            <p class="text-center"><a  href="https://github.com/owik100/Frogger" target="blank">Github  <i class="fab fa-github"></i> </a></p> 
+                                <img  class="bImg mx-auto d-block" id="main5" src="images/Projects/Frogger/Lvl1.png">
                         </div>
                         <div class="modal-footer">
-                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
-                                    <i class="fab fa-github"></i>
-                                </a>
+                                <img class="d-block w-100 sImg" smallID=small5 src="images/Projects/Frogger/Lvl1.png">
+                                <img class="d-block w-100 sImg" smallID=small5 src="images/Projects/Frogger/Lvl3.png">    
+                                <img class="d-block w-100 sImg" smallID=small5 src="images/Projects/Frogger/Help.png">                    
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="modal fade" id="Project6Modal" tabindex="-1" role="dialog" aria-labelledby="Project1ModalTitle"
+            <div class="modal fade" id="Project6Modal" tabindex="-1" role="dialog" aria-labelledby="Project6ModalTitle"
                 aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Mood food</h5>
+                            <h5 class="modal-title w-100 text-center">Dhos Adventures</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <img class="img-fluid" src="images/Projects/Golf/new game.PNG">
-                            <img class="img-fluid" src="images/Projects/Golf/in game.PNG">
-                            <img class="img-fluid" src="images/Projects/Golf/game over.PNG">
+                            <p class="text-center">Dwuwymiarowa gra platformowa tworzona w środowisku unity. Składa się z ponad 20 poziomów.</p>
+                            <p class="text-center">Użyte języki i technologie: C#, Unity</p>
+                            <p class="text-center"><a  href="https://owik.itch.io/Dhos-Adeventures" target="blank">Itch.io  <i class="fab fa-itch-io"></i> </a></p> 
+                                <img  class="bImg mx-auto d-block" id="main6" src="images/Projects/Dhos/1.1.jpg">
                         </div>
                         <div class="modal-footer">
-                                <a href="https://github.com/owik100/Mood-Food" target="blank">Github
-                                    <i class="fab fa-github"></i>
-                                </a>
+                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/1.1.jpg">
+                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/1.3.jpg">    
+                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/2.3.jpg">   
+                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/4.3.jpg">    
+                                <img class="d-block w-100 sImg" smallID=small6 src="images/Projects/Dhos/5.2.jpg">                    
                         </div>
                     </div>
                 </div>
