Projection section update

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="styles/site.css">
 </head>
 
@@ -53,7 +55,7 @@
     <section id="home">
         <h1 class="text-center display-3">Marcin Owczarz</h1>
 
-        <div class="opis">
+        <div class="description">
         </div>
 
         <!--Icons-->
@@ -176,16 +178,12 @@
         </div>
     </section>
 
-
-
-
     <!--Projects section-->
     <section id="projects">
-        <p class="text-center">Kilka zrealizowanych przeze mnie projektów
-        </p>
+        <h1 class="text-center topic">Projekty</h1>
+        <p class="text-center mb-5">Kilka zrealizowanych przeze mnie projektów.</p>
         <div class="container">
             <div class="card-deck">
-
 
                 <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project1"
                     data-target="#Project1Modal">
@@ -439,10 +437,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
     </section>
 
     <!--Contact, footer-->
@@ -470,5 +464,4 @@
     <script src="scripts/script.js"></script>
 
 </body>
-
 </html>
